Escaping URL before submitting request to avoid charset/locale problems